{
    "name": "Controller",
    "maps": [
        {
            "name": "Controller",
            "id": "3ed4052a-a4d7-4a21-96aa-535c9ca3c96f",
            "actions": [
                {
                    "name": "TriggerPress",
                    "type": "Button",
                    "id": "aeff93db-ff1b-436e-ab12-eae3e6cb8c98",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "GripPress",
                    "type": "Button",
                    "id": "6518995a-c2b1-4ce3-bb22-ea3c3c56adf1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "JoyStick",
                    "type": "Value",
                    "id": "c0b87254-ae44-481c-adae-85cea7a358e0",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "5ed42b61-7a4e-4aed-bf98-c88034e8ccf3",
                    "path": "<XRController>{RightHand}/triggerPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "ControllerRight",
                    "action": "TriggerPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2921019c-4896-42fa-8529-b4072ebda9e5",
                    "path": "<XRController>{LeftHand}/triggerPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "ControllerLeft",
                    "action": "TriggerPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7073a3db-6706-4315-8d43-834596ca628d",
                    "path": "<XRController>{RightHand}/gripPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "ControllerRight",
                    "action": "GripPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7da04489-4f96-4d33-8055-8e8e919cdfc5",
                    "path": "<XRController>{LeftHand}/gripPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "ControllerLeft",
                    "action": "GripPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2d6879fe-1f90-4dbf-9446-1ad78be2d943",
                    "path": "<XRController>{RightHand}/thumbstick",
                    "interactions": "",
                    "processors": "",
                    "groups": "ControllerRight",
                    "action": "JoyStick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6e196679-8458-4515-bd82-d80f0c8bf201",
                    "path": "<XRController>{LeftHand}/thumbstick",
                    "interactions": "",
                    "processors": "",
                    "groups": "ControllerLeft",
                    "action": "JoyStick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Controller",
            "bindingGroup": "Controller",
            "devices": [
                {
                    "devicePath": "<XRController>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "ControllerLeft",
            "bindingGroup": "ControllerLeft",
            "devices": [
                {
                    "devicePath": "<XRController>{LeftHand}",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "ControllerRight",
            "bindingGroup": "ControllerRight",
            "devices": [
                {
                    "devicePath": "<XRController>{RightHand}",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}